--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mobile-broadband-provider-info (20170903-2) UNRELEASED; urgency=medium
 
   * d/copyright: Use https protocol in Format field
+  * d/control: Remove trailing whitespaces
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
@@ -15,7 +16,7 @@ mobile-broadband-provider-info (20170903-1) unstable; urgency=medium
     - bm: add provider Bermuda Cell One
     - is: use correct APN for Siminn Iceland
     - kg: removes defunct operators FONEX and nexi for Kyrgyzstan
-    - kz: remove defunct CDMA operators with new GSM operator Altel 4G 
+    - kz: remove defunct CDMA operators with new GSM operator Altel 4G
       for Kazakhstan
     - de: remove AldiTalk 24h flatrate
     - hk: update 3HK
