--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 mobile-broadband-provider-info (20170903-2) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * d/copyright: Use https protocol in Format field
   * d/control: Remove trailing whitespaces
   * d/control: Set Vcs-* to salsa.debian.org
+
+  [ Graham Inggs ]
+  * Adopt the package (Closes: #884619, #932331)
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
