--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ mobile-broadband-provider-info (20170903-2) UNRELEASED; urgency=medium
   * Adopt the package (Closes: #884619, #932331)
   * Switch to debhelper 12
   * Set Rules-Requires-Root: no
+  * Update debian/watch and drop get-orig-source target
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
