--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mobile-broadband-provider-info (20170903-2) UNRELEASED; urgency=medium
+mobile-broadband-provider-info (20190618-1) UNRELEASED; urgency=medium
 
   [ Ondřej Nový ]
   * d/copyright: Use https protocol in Format field
@@ -10,6 +10,7 @@ mobile-broadband-provider-info (20170903-2) UNRELEASED; urgency=medium
   * Switch to debhelper 12
   * Set Rules-Requires-Root: no
   * Update debian/watch and drop get-orig-source target
+  * New upstream release (Closes: #929633)
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
