--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ mobile-broadband-provider-info (20190618-1) UNRELEASED; urgency=medium
   * Set Rules-Requires-Root: no
   * Update debian/watch and drop get-orig-source target
   * New upstream release (Closes: #929633)
+  * Do not ship NEWS file no longer provided by upstream
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
