--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ mobile-broadband-provider-info (20190618-1) UNRELEASED; urgency=medium
   * Update debian/watch and drop get-orig-source target
   * New upstream release (Closes: #929633)
   * Do not ship NEWS file no longer provided by upstream
+  * Drop Lintian overrides no longer needed
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
