--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ mobile-broadband-provider-info (20190618-1) UNRELEASED; urgency=medium
   * Do not ship NEWS file no longer provided by upstream
   * Drop Lintian overrides no longer needed
   * Update debian/copyright
+  * Bump Standards-Version to 4.4.0, no changes
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:45:55 +0200
 
