--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info (20190618-2) unstable; urgency=medium
+
+  * Add build dependency on xsltproc
+
+ -- Graham Inggs <ginggs@debian.org>  Tue, 13 Aug 2019 14:56:32 +0000
+
 mobile-broadband-provider-info (20190618-1) unstable; urgency=medium
 
   [ Ondřej Nový ]
