--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mobile-broadband-provider-info (20190618-3) UNRELEASED; urgency=medium
+
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
+    Repository-Browse.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Sun, 05 Jan 2020 10:58:42 +0000
+
 mobile-broadband-provider-info (20190618-2) unstable; urgency=medium
 
   * Add build dependency on xsltproc
