--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
 mobile-broadband-provider-info (20190618-3) UNRELEASED; urgency=medium
 
+  [ Debian Janitor ]
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
     Repository-Browse.
   * Update standards version to 4.4.1, no changes needed.
 
- -- Debian Janitor <janitor@jelmer.uk>  Sun, 05 Jan 2020 10:58:42 +0000
+  [ Sicelo Mhlongo ]
+  * Add eSwatini mobile provider info
+
+ -- Graham Inggs <ginggs@debian.org>  Mon, 17 Feb 2020 19:10:02 +0000
 
 mobile-broadband-provider-info (20190618-2) unstable; urgency=medium
 
