--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mobile-broadband-provider-info (20210805-1) UNRELEASED; urgency=medium
+mobile-broadband-provider-info (20210805-1) unstable; urgency=medium
 
   * New upstream release
   * Bump Standards-Version to 4.6.0, no changes
