--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info (20220315-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Graham Inggs <ginggs@debian.org>  Mon, 11 Apr 2022 17:33:52 +0000
+
 mobile-broadband-provider-info (20210805-1) unstable; urgency=medium
 
   * New upstream release
