--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mobile-broadband-provider-info (20220315-1) UNRELEASED; urgency=medium
+mobile-broadband-provider-info (20220315-1) unstable; urgency=medium
 
   * New upstream release
   * Update debian/copyright
 
- -- Graham Inggs <ginggs@debian.org>  Mon, 11 Apr 2022 17:33:52 +0000
+ -- Graham Inggs <ginggs@debian.org>  Mon, 11 Apr 2022 18:34:22 +0000
 
 mobile-broadband-provider-info (20210805-1) unstable; urgency=medium
 
