--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mobile-broadband-provider-info (20220511-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Bump Standards-Version to 4.6.1, no changes
 
  -- Graham Inggs <ginggs@debian.org>  Sun, 05 Jun 2022 08:18:50 +0000
 
