--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mobile-broadband-provider-info (20220511-1) UNRELEASED; urgency=medium
+mobile-broadband-provider-info (20220511-1) unstable; urgency=medium
 
   * New upstream release
   * Bump Standards-Version to 4.6.1, no changes
 
- -- Graham Inggs <ginggs@debian.org>  Sun, 05 Jun 2022 08:18:50 +0000
+ -- Graham Inggs <ginggs@debian.org>  Sun, 05 Jun 2022 09:18:14 +0000
 
 mobile-broadband-provider-info (20220315-1) unstable; urgency=medium
 
