--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info (20220725-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Graham Inggs <ginggs@debian.org>  Sun, 14 Aug 2022 09:16:36 +0000
+
 mobile-broadband-provider-info (20220511-1) unstable; urgency=medium
 
   * New upstream release
