--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info (20221107-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Graham Inggs <ginggs@debian.org>  Sat, 19 Nov 2022 11:27:33 +0000
+
 mobile-broadband-provider-info (20220725-1) unstable; urgency=medium
 
   * New upstream release
