--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info (20230416-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Graham Inggs <ginggs@debian.org>  Sun, 23 Apr 2023 12:25:26 +0000
+
 mobile-broadband-provider-info (20221107-1) unstable; urgency=medium
 
   * New upstream release
