--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mobile-broadband-provider-info (20230416-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Update debian/copyright
 
  -- Graham Inggs <ginggs@debian.org>  Sun, 23 Apr 2023 12:25:26 +0000
 
