--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ mobile-broadband-provider-info (20230416-1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Update debian/copyright
+  * Bump Standards-Version to 4.6.2, no changes
 
  -- Graham Inggs <ginggs@debian.org>  Sun, 23 Apr 2023 12:25:26 +0000
 
