New upstream release 20240407

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info (20240407-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Graham Inggs <ginggs@ubuntu.com>  Thu, 02 May 2024 09:46:11 +0000
+
 mobile-broadband-provider-info (20230416-1) unstable; urgency=medium
 
   * New upstream release
