--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ mobile-broadband-provider-info (20240407-1) UNRELEASED; urgency=medium
   * Update debian/watch
   * Add build dependency on meson
   * Update debian/copyright
+  * Bump Standards-Version to 4.7.0, no changes
 
  -- Graham Inggs <ginggs@ubuntu.com>  Thu, 02 May 2024 09:46:11 +0000
 
